--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,20 @@ android {
     }
 }
 
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation "com.android.support:recyclerview-v7:27.1.0"
     implementation "com.android.support:cardview-v7:27.1.0"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "android.arch.paging:runtime:1.0.1"
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
