Stop reloading the activities when the orientation changes
Fixes #8

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".home.HomeActivity">
+        <activity
+            android:name=".home.HomeActivity"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".movieDetails.MovieDetailsActivity" />
+        <activity
+            android:name=".movieDetails.MovieDetailsActivity"
+            android:configChanges="orientation|screenSize" />
 
     </application>
 
